k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkops
  labels:
    name: linkops
    app: linkops
